# nanoevals

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
examples/: custom_metrics.py  judge.py  mock_agent.py  run_eval.py
examples/datasets/: agent_golden.yaml  judge_golden.yaml
nanoevals/: __init__.py  app.py  cli.py  dataset.py  gate.py  metrics.py  runner.py  types.py
tests/: test_cli.py  test_dataset.py  test_gate.py  test_metrics.py  test_runner.py
tests/fixtures/: agent_golden.yaml  judge_golden.yaml
