[project]
name = "nanoevals"
version = "0.1.0"
description = "Minimal eval library for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
app = ["streamlit>=1.45.0"]
dev = ["pytest>=8.0"]

[project.scripts]
nanoevals = "nanoevals.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
